--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evolution-api",
+  "name": "app_acosapix",
   "version": "1.5.0",
   "description": "Rest api for communication with WhatsApp",
   "main": "./dist/src/main.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EvolutionAPI/evolution-api.git"
+    "url": "git+https://github.com/EvolutionAPI/app_apiacosx.git"
   },
   "keywords": [
     "chat",
@@ -37,9 +37,9 @@
   },
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/EvolutionAPI/evolution-api/issues"
+    "url": "https://github.com/EvolutionAPI/app_apiacosx/issues"
   },
-  "homepage": "https://github.com/EvolutionAPI/evolution-api#readme",
+  "homepage": "https://github.com/EvolutionAPI/app_apiacosx#readme",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
